// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tss Commands should create the commands 1`] = `
[
  "TSS ADD(mf_jir) IDMAP(zwednmap) IDMAPDN('dist_jirka') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "TSS ADD(mf_lena) IDMAP(zwednmap) IDMAPDN('dist_lena') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "TSS ADD(mf_pab) IDMAP(zwednmap) IDMAPDN('dist_pablo') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "",
  "TSS REFRESH
",
]
`;

exports[`Tss Commands should create the commands with warning 1`] = `
[
  "TSS ADD(mf_jir) IDMAP(zwednmap) IDMAPDN('dist_jirka') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "TSS ADD(mf_lena) IDMAP(zwednmap) IDMAPDN('dist_lena') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "TSS ADD(mf_pab) IDMAP(zwednmap) IDMAPDN('dist_pablo') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "TSS ADD(mf_name) IDMAP(zwednmap) IDMAPDN('Dist naaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaame ok') IDMAPRN('ldap://host:1234') IDLABEL('dn user mapping')
",
  "",
  "TSS REFRESH
",
]
`;
